--- a/cadastroitens.ui
+++ b/cadastroitens.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CadastroVeiculos</class>
- <widget class="QDialog" name="CadastroVeiculos">
+ <class>cadastroItens</class>
+ <widget class="QDialog" name="cadastroItens">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,22 +11,22 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Tela de Cadastro de Veiculos</string>
+   <string>Tela de Cadastro de Itens</string>
   </property>
   <widget class="QWidget" name="centralwidget" native="true">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>761</width>
-     <height>631</height>
+     <x>-30</x>
+     <y>10</y>
+     <width>861</width>
+     <height>551</height>
     </rect>
    </property>
-   <widget class="QLineEdit" name="lineEdit_placa">
+   <widget class="QLineEdit" name="lineEdit_precoItem">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>120</y>
+      <x>280</x>
+      <y>180</y>
       <width>301</width>
       <height>51</height>
      </rect>
@@ -35,63 +35,11 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_modelo">
+   <widget class="QPushButton" name="pushButton_criarItem">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>200</y>
-      <width>301</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_marca">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>280</y>
-      <width>301</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_ano">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>360</y>
-      <width>301</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_quantidadeEixos">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>440</y>
-      <width>301</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_criarVeiculo">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>510</y>
+      <x>375</x>
+      <y>490</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -100,86 +48,99 @@
      <string>Criar</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_placa">
+   <widget class="QLineEdit" name="lineEdit_nomeItem">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>280</x>
       <y>100</y>
-      <width>67</width>
-      <height>21</height>
+      <width>301</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string>Placa</string>
+     <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_modelo">
+   <widget class="QLineEdit" name="lineEdit_quantidadeItem">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>180</y>
-      <width>67</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Modelo</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_marca">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
+      <x>280</x>
       <y>260</y>
-      <width>67</width>
-      <height>21</height>
+      <width>301</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string>Marca</string>
+     <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_ano">
+   <widget class="QLineEdit" name="lineEdit_descricaoItem">
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>340</y>
-      <width>67</width>
+      <y>350</y>
+      <width>401</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_nome">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>80</y>
+      <width>121</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Ano</string>
+     <string>Nome do Item</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_eixos">
+   <widget class="QLabel" name="label_preco">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>160</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Preço por Unidade</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_quantidade">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>240</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Quantidade</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_descricao">
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>420</y>
-      <width>191</width>
+      <y>330</y>
+      <width>131</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Quantidade de Eixos</string>
+     <string>Descrição do Item</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QStatusBar" name="statusbar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>3</width>
-     <height>25</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QMenuBar" name="menubar">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -187,12 +148,6 @@
      <width>800</width>
      <height>30</height>
     </rect>
-   </property>
-   <property name="defaultUp">
-    <bool>false</bool>
-   </property>
-   <property name="nativeMenuBar">
-    <bool>true</bool>
    </property>
    <widget class="QMenu" name="menuMenu">
     <property name="title">
@@ -206,6 +161,16 @@
    </widget>
    <addaction name="menuMenu"/>
    <addaction name="menuSair"/>
+  </widget>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>3</width>
+     <height>25</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
