--- a/estoquewindow.ui
+++ b/estoquewindow.ui
@@ -13,10 +13,18 @@
   <property name="windowTitle">
    <string>Tela de Estoque</string>
   </property>
-  <property name="unifiedTitleAndToolBarOnMac">
+  <property name="unifiedTitleAndToolBarOnMac" stdset="0">
    <bool>false</bool>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="centralwidget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>791</width>
+     <height>541</height>
+    </rect>
+   </property>
    <widget class="QGroupBox" name="groupBoxEstoque">
     <property name="geometry">
      <rect>
@@ -29,7 +37,7 @@
     <property name="title">
      <string>GroupBox</string>
     </property>
-    <widget class="QListView" name="listView_Estoque">
+    <widget class="QListView" name="listView_Itens">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -75,7 +83,20 @@
       </rect>
      </property>
      <property name="text">
-      <string>Estoque</string>
+      <string>Itens</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="refreshItens">
+     <property name="geometry">
+      <rect>
+       <x>250</x>
+       <y>15</y>
+       <width>31</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>↻</string>
      </property>
     </widget>
    </widget>
@@ -140,6 +161,19 @@
       <string>Veículos</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="refreshVeiculos">
+     <property name="geometry">
+      <rect>
+       <x>250</x>
+       <y>15</y>
+       <width>31</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>↻</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -164,7 +198,16 @@
    <addaction name="menuMenu"/>
    <addaction name="menuSair"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>3</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
